Fix alignment of first library item

--- a/app/stylesheets/builtin-pages/library.less
+++ b/app/stylesheets/builtin-pages/library.less
@@ -89,7 +89,7 @@ main {
 }
 
 .sidebar .archives-list {
-  margin-top: 58px; // height of .sidebar-actions
+  margin-top: 54px; // height of .sidebar-actions
   margin-bottom: 38px; // height of .trash-controls
 }
 
